--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="cookieDisplay" style="margin-top: 20px;"></div>
    
     <footer>
-        <p>&copy; Sanavi Kothari, 2024</p>
+        <p>&copy; Azumi Castaneda, 2024</p>
     </footer>
 
     <script>
