--- a/index.html
+++ b/index.html
@@ -2,19 +2,12 @@
 <html lang=eng>
 <head>
     <meta charset="UTF-8">
-    <title>Cookies Example</title>
-       <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My First Cookie</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cookie Example</title>
 </head>
 <body>
     <h1>Welcome to the Cookie Example Page</h1>
-
-    <div id="cookieDisplay" style="margin-top: 20px;"></div>
    
-    <footer>
-        <p>&copy; Azumi Castaneda, 2024</p>
-    </footer>
-
     <script>
       function setCookie(cname, cvalue, exdays) {
         const d = new Date();
@@ -50,5 +43,8 @@
         }
       }
     </script>
+    <footer>
+        <p>&copy; Azumi Castaneda, 2024</p>
+    </footer>
 </body>
 </html>
